tests/artifacts/perf/2026-06-20_ufunc_boolean_index_vs_numpy_cod_b/numpy_boolean_index_vmi1149989_retry.txt
  File "<stdin>", line 4
    print(f"host={platform.node()} user={os.environ.get(\"USER\")} python={sys.version.split()[0]} numpy={np.__version__} load={os.getloadavg()}")
                                                         ^
SyntaxError: unexpected character after line continuation character
